--- a/cmd/index.html
+++ b/cmd/index.html
@@ -34,7 +34,7 @@
                 <a class="button" href="/">Random</a>
             </div>
             <img style="max-height: 100%; max-width: 100%;" alt="{{.Name}}" src="data:image/png;base64,{{.Picture}}" />
-            <p>{{.Current}}. {{.Name}}</p>
+            <p>{{.Current}}/${.Size}. {{.Name}}</p>
         </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
